tests/negative/test_mac_variadic_few_args.orb
mac foo (a b::variadic) {
    ret \();
};

fnc main () () {
    foo;
};